client/src/assets/css/plus.css
.blueBg {
    position: absolute;
    top: 0;
    width: 100%;
    z-index: -1;
}

.plusTitle {
    font-size: 65px;
    line-height: 65px;
}

.secondaryColor {
    color: #5a5a5a;
}

.triaryColor {
    color: #50B8E7;
}

.plusBtn {
    background: #50B8E7;
    border-radius: 15px;
    border: none;
    color: #fff;
    padding: 15px 0px;
}

.plusForm {
    background: #50B8E7;
    border-radius: 40px;
    width: 100%;
    max-width: 630px;
    position: relative;
    height: 600px;
}

.collapsofthelastcomponent {
    background: #50B8E7;
    color: white;
    border-radius: 10px;

}
.lastcomponentbutton {
    color: #FFFFFF;
    border: solid 0.3px #FFFFFF;
    background-color: #50B8E7;
    border-radius: 15px;
}

.plusFormTitle {
    line-height: 142.9%;
    color: rgba(255, 255, 255, 0.54);
}

.plusInput {
    border: 1px solid #D5D5D5 !important;
    border-radius: 11px !important;
    width: 100%;
    background-color: transparent !important;
    color: #fff !important;
    font-size: 18px !important;
}

.plusInput::placeholder {
    color: rgba(255, 255, 255, 0.54) !important;
    font-weight: 500 !important;
}

.plusInput {
    color: rgba(255, 255, 255, 0.54) !important;
    font-weight: 500 !important;
}

.plusSelectArrow {
    background-image: url('../images/plus/selectArrow.svg') !important;
    background-position: right 1rem center !important;
    background-size: 20px 15px !important;
}

.formIluDiv {
    position: absolute;
    bottom: 29px;
    left: 91px;
    width: 100%;
    max-width: 339.31px;
    width: 339.31px;
}

.plusFormBtnDiv {
    position: absolute;
    right: 0rem;
    top: 275px;
    
}

.finanuWhiteBtn {
    background: #FFFFFF;
    border-radius: 8px;
    font-weight: 700;
    color: #50B8E7;
    border: none;
}

.darkTheme .secondaryColor {
    color: #fff;
}

.plusSliderBackground {
    background: rgba(190, 232, 255, 0.5);
    border-radius: 25px;
    padding: 200px 3rem;
}

.sliderTabs {
    position: absolute;
    top: 0;

}

.plusSliderButton {
    box-shadow: inset 0 0 0 0 #50B8E7;
    border-radius: 8px 0px 0px 8px;
    padding: 0.25rem 0rem;
    cursor: pointer;
}

.videobackground {
    background: #50B8E7;
    border-radius: 14px;
    max-width: 900px;
    margin-left: 25px;
    margin-bottom: 25px;
}

.sliderBtnEffect {
    -webkit-transition: ease-out 5s;
    -moz-transition: ease-out 5s;
    transition: ease-out 5s;
    box-shadow: inset 150px 0 0 0 #50B8E7;
    border-radius: 8px;
    cursor: unset;

}

.plusReviewsDiv {
    background: #FFFFFF;
    box-shadow: 0px 4px 20px rgba(162, 162, 162, 0.27);
    border-radius: 25px;
}

.plusLink {
    color: #50B8E7;
    font-weight: 700;
    font-size: 18px;
}

.plusCoverDiv {
    background: #FFFFFF;
    border-radius: 8px;
    box-shadow: 0px 0px 22px rgba(0, 0, 0, 0.12);
    border-radius: 25px;
}

.selectofangebote {
    background: #FFFFFF;
    border-radius: 9px !important;
    border: none !important;
    font-weight: 700;
    color: #5A5A5A !important;

}

.cardofthelastcomponent {
    max-width: 339px;
    height: 330px;
    background: #50B8E7;
    border-radius: 25px;
    display: flex;
    align-items: center;
    color: white;
}

.buttonofthelastcomponent {
    color: #FFFFFF;
    border: solid 0.3px #FFFFFF;
    background-color: transparent;
}

.ltBlueSection {
    background: #E7F5FC;
    border-radius: 27px;
}

/* .topBottomBordersDiv {
    border-top: 2px solid #FFFFFF;
    border-bottom: 2px solid #FFFFFF;

} */

@media (max-width: 1399.98px) {}

@media (max-width: 1199.98px) {}

@media (max-width: 991.98px) {
    .plusForm {
        max-width: unset;
    }
}

@media (max-width: 767.98px) {
    .plusSliderBackground {
        background: rgba(190, 232, 255, 0.5);
        border-radius: 25px;
        padding: 100px 1rem;
    }
}

@media (max-width: 575.98px) {
    .formIluDiv {
        max-width: 300px;
    }

    .plusForm {
        height: 670px;
        border-radius: 25px;
    }

    .blueBg {
        position: relative;
        background-color: #E5F6FF;
    }

    .plusSliderBackground {
        background: rgba(190, 232, 255, 0.5);
        border-radius: 25px;
        padding: 3rem 1.5rem;
    }

    .plusTitle {
        font-size: 35px;
    }

    .plusLink {
        font-size: 14px;
    }

    .plusBtn {
        font-size: 14px;

    }
}

